@@ -24,3 +24,4 @@ lib-y := div64.o memchr.o memzero.o
 lib-y += memcpy.o
 lib-y += relocate.o
 lib-y += exception_vectors.o
+lib-y += lib1funcs.o
