@@ -19,12 +19,12 @@
 #   USA.
 #
 
-lib-y := vsprintf.o ctype.o udiv.o
+lib-y := vsprintf.o ctype.o
 lib-y += strlen.o string.o
 lib-y += crc32.o xmodem.o
 lib-y += env.o spinner.o
 lib-y += dump.o
 #lib-y += div64.o
-
+#lib-y += udiv.o
 #CFLAGS_vsprintf.o += -mthumb
 #CFLAGS_crc32.o = -mthumb -mthumb-interwork
