@@ -1,3 +1,8 @@
+2005-02-19  Marc Singer  <elf@buici.com>
+
+	* src/arch-arm/lib/lib1funcs.S: Imported this file from kernel in
+	order to get general purpose integer divide and modulo functions.
+	
 2005-02-18  Marc Singer  <elf@buici.com>
 
 	* src/mach-lh7952x/init-lpd79520.c: Fixed SDRAM init to comply
